Update to support query vars, added POST, and updated read.me

--- a/serverless.yml
+++ b/serverless.yml
@@ -12,7 +12,7 @@ functions:
     events:
     - http:
         path: graphql
-        method: get
+        method: any
         cors: true
 
 plugins:
