--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "config.js",
   "scripts": {
+    "start": "node ./node_modules/serverless/bin/serverless offline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +14,8 @@
     "apollo-server-lambda": "^1.3.2",
     "graphql-tools": "^2.21.0",
     "node-fetch": "^2.1.1",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "serverless": "^1.26.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
