--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "config.js",
   "scripts": {
-    "start": "node ./node_modules/serverless/bin/serverless offline",
+    "start": "node $NODE_DEBUG_OPTION ./node_modules/serverless/bin/serverless offline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
